mybril/src/snapshots/mybril__ssa__test__dominators_dot@cond.bril.snap
---
source: mybril/src/ssa.rs
expression: output
input_file: mybril/tests/examples/df/cond.bril
---
@main {
  a: int = const 47;
  b: int = const 42;
  cond: bool = const true;
  br cond .left .right;
.left:
  b: int = const 1;
  c: int = const 5;
  jmp .end;
.right:
  a: int = const 2;
  c: int = const 10;
  jmp .end;
.end:
  d: int = sub a c;
  print d;
}


function main:
  b0: b0 
  end: b0 end 
  left: b0 left 
  right: b0 right 


