mybril/src/snapshots/mybril__ssa__test__dominators_dot@fact.bril.snap
---
source: mybril/src/ssa.rs
expression: output
input_file: mybril/tests/examples/df/fact.bril
---
@main {
  result: int = const 1;
  i: int = const 8;

.header:
  # Enter body if i >= 0.
  zero: int = const 0;
  cond: bool = gt i zero;
  br cond .body .end;

.body:
  result: int = mul result i;

  # i--
  one: int = const 1;
  i: int = sub i one;

  jmp .header;

.end:
  print result;
}


function main:
  b0: b0 
  body: b0 body header 
  end: b0 end header 
  header: b0 header 


