mybril/src/snapshots/mybril__ssa__test__insert_phi@if-orig.bril-2.snap
---
source: mybril/src/ssa.rs
expression: output
input_file: mybril/tests/examples/ssa/if-orig.bril
---
@main(cond: bool) {
.entry:
    a: int = const 47;
    br cond .left .right;
.left:
    a: int = add a a;
    jmp .exit;
.right:
    a: int = mul a a;
    jmp .exit;
.exit:
    print a;
}



