mybril/src/snapshots/mybril__ssa__test__insert_phi@if-orig.bril.snap
---
source: mybril/src/ssa.rs
expression: "format!(\"{}\\n\\n{} -> {}\\n\\n{}\", txt, orig.1, after.1,\n    bril2txt(json_after.as_str()))"
input_file: mybril/tests/examples/ssa/if-orig.bril
---
@main(cond: bool) {
.entry:
    a: int = const 47;
    br cond .left .right;
.left:
    a: int = add a a;
    jmp .exit;
.right:
    a: int = mul a a;
    jmp .exit;
.exit:
    print a;
}


114514 -> 114514

@main(cond: bool) {
.entry:
  a: int = const 47;
  br cond .left .right;
.left:
  a: int = add a a;
  jmp .exit;
.right:
  a: int = mul a a;
  jmp .exit;
.exit:
  a = phi a a a .entry .right .left;
  print a;
  ret;
}

